tests/baselines/reference/jsxChildWrongType.errors.txt
tests/cases/compiler/index.tsx(5,4): error TS2746: This JSX tag's 'children' prop expects a single child of type 'ReactNode', but multiple children were provided.


==== tests/cases/compiler/index.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    const a = (
      <main>
       ~~~~
!!! error TS2746: This JSX tag's 'children' prop expects a single child of type 'ReactNode', but multiple children were provided.
        {(<div />) as unknown}
        <span />
      </main>
    );
    